eclipse-workspace/Surya Dev Org/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Total_invoice_amount__c</fullName>
        <label>Total invoice amount</label>
        <summarizedField>products_purchased__c.total_price_of_all_units__c</summarizedField>
        <summaryForeignKey>products_purchased__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_invoice_quantity__c</fullName>
        <label>Total invoice quantity</label>
        <summaryForeignKey>products_purchased__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>customer_name__c</fullName>
        <label>customer name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>payment__c</fullName>
        <label>payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>credit card</fullName>
                </value>
                <value>
                    <fullName>paypal</fullName>
                </value>
                <value>
                    <fullName>cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>